@@ -69,9 +69,9 @@
   <AT_AP_SH_A.label>Anty Military uniform Cloak</AT_AP_SH_A.label>
   <AT_AP_SH_A.description>A camouflaged cloak worn by Antie soldiers. Although it lacks the ability to protect the user from the attacks, it protects the user from both hot and cold weather.</AT_AP_SH_A.description>
   <AT_AP_CO_A.label>Anty Commender Cape</AT_AP_CO_A.label>
-  <AT_AP_CO_A.description>A cloak worn by Antie commanders to show the class distinction. It lacks the ability to protect the user, but it still provides some protection from hot and cold weather.</AT_AP_CO_A.description>
+  <AT_AP_CO_A.description>A Cape worn by Antie commanders to show the class distinction. It lacks the ability to protect the user, but it still provides some protection from hot and cold weather.</AT_AP_CO_A.description>
   <AT_AP_CO_B.label>Anty Commender Cloak</AT_AP_CO_B.label>
-  <AT_AP_CO_B.description>A cape worn by Antie commanders to show the class distinction. It lacks the ability to protect the user, but it still provides some protection from hot and cold weather.</AT_AP_CO_B.description>
+  <AT_AP_CO_B.description>A Cloak worn by Antie commanders to show the class distinction. It lacks the ability to protect the user, but it still provides some protection from hot and cold weather.</AT_AP_CO_B.description>
   <AT_AP_Power_A.label>Anty Cataglyphis armor</AT_AP_Power_A.label>
   <AT_AP_Power_A.description>A powered armor that is developed to compensate for their weakness against fire and toxin. The refleum radiant panels and insulation panels work depending on the surroundings, and purifies the toxins entering the body. It still won't prevent food poisoning.\n\nIt has a fire control system to reduce aiming time.</AT_AP_Power_A.description>
   <AT_AP_Power_Head_A.label>Anty Cataglyphis helmet</AT_AP_Power_Head_A.label>
